Added complete get all trips route and updated missing swagger documentation
