# backend/routes/routes.go
@@ -18,6 +18,7 @@ func AppRoutes(server *gin.Engine, deps *Dependencies){
 	//public routes
 	server.POST("/signup", deps.TouristController.Signup)
 	server.POST("/login", deps.TouristController.Login)
+	server.GET("/get_all_trips", deps.TripController.GetAllTrips)
 
 	//test route
 	server.GET("/test", func(c *gin.Context) {
